Updated to table format to be compatible with more browsers

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,29 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>HTML Email Base</title>
+		<title>ZStall Info</title>
 		<meta name="viewport" content="width=device-width" />
 	</head>
 	<body style="margin: 0; padding: 0;">
-		<img src="https://gallery.mailchimp.com/8234ed62d6a7fa87721ff1d8a/images/0b1312c7-f7ed-422d-8e3c-45bb0d0a38b8.png" />
-		<h1>ZStall.com News Letter!</h1>
-		<p>All the latest updates and news about Zachary Stall</p>
+		<table border="0" cellpadding="0" cellspacing="0" style="background-color: #d2d2d2;" width="100%">
+			<tr>
+				<td>
+					<table align="center" border="0" cellpadding="0" cellspacing="0" style="text-align: center;" width="600">
+						<tr>
+							<td style="background-color: #2d2d2d; padding: 12px 0;" >
+								<img src="https://gallery.mailchimp.com/8234ed62d6a7fa87721ff1d8a/images/0b1312c7-f7ed-422d-8e3c-45bb0d0a38b8.png"
+								style="display: block; max-width: 100%;"
+								width="600" /></td>
+						</tr>
+						<tr>
+							<td style="color: #2d2d2d; font-family: 'Arial Black'; font-size: 74px; line-height: 74px; padding: 5px 0 10px 0; text-transform: uppercase;">ZStall.com</td>
+						</tr>
+						<tr>
+							<td style="background: #2d2d2d; color: #fcfbfd; font-family: 'Arial Black'; font-size: 26px; line-height: 26px; padding: 10px 0; text-transform: uppercase;">Zachary Stall News and Updates</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
