Added pic and more table elements

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 	</head>
 	<body style="margin: 0; padding: 0;">
-		<table border="0" cellpadding="0" cellspacing="0" style="background-color: #d2d2d2;" width="100%">
+		<table align="center" border="0" cellpadding="0" cellspacing="0" style="background-color: #d2d2d2;" width="70%">
 			<tr>
 				<td>
 					<table align="center" border="0" cellpadding="0" cellspacing="0" style="text-align: center;" width="600">
@@ -22,6 +22,15 @@
 						<tr>
 							<td style="background: #2d2d2d; color: #fcfbfd; font-family: 'Arial Black'; font-size: 26px; line-height: 26px; padding: 10px 0; text-transform: uppercase;">Zachary Stall News and Updates</td>
 						</tr>
+					</table>
+					<table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+						<tr>
+							<td>
+								<img src="https://i.imgur.com/DkwK2ug.jpg"
+								style="display: block; max-width: 100%;"
+								width="600" />
+							</td>
+						</tr>						
 					</table>
 				</td>
 			</tr>
