Added info to the bottom of the page

--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,92 @@
 					</table>
 					<table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
 						<tr>
-							<td>
+							<td style="padding-top: 20px;">
 								<img src="https://i.imgur.com/DkwK2ug.jpg"
 								style="display: block; max-width: 100%;"
 								width="600" />
 							</td>
-						</tr>						
+						</tr>
 					</table>
+					<table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+						<tr>
+							<td style="padding-right: 10px;">
+								<table cellpadding="0" cellspacing="0" style="text-align: center;"
+								bgcolor="#5b3885"; width="290">
+									<tr>
+										<td>
+											<img alt="ornamentation" height="15" src="https://i.imgur.com/PdYlc3R.png" style="display: block;" width="290">
+										</td>
+									</tr>
+									<tr>
+										<td style="font-family: 'Arial Black'; color: #fcfbfd; font-size: 48px; line-height: 48px; padding-top: 20px; text-transform: uppercase;">
+											&bull; SAT &bull;
+										</td>
+									</tr>
+									<tr>
+										<td style="font-family: Arial; color: #fcfbfd; font-size: 30px; font-weight: bold; line-height: 30px; padding-bottom: 20px; padding-top: 5px; text-transform: uppercase;">
+											New Pics
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<img src="https://i.imgur.com/PdYlc3R.png"
+											style="display: block; max-width: 100%;">
+										</td>
+									</tr>
+								</table>
+							</td>
+							<td style="padding-left: 10px;">
+								<table cellpadding="0" cellspacing="0" style="text-align: center;" bgcolor="#0089b4"; width="290">
+									<tr>
+										<td>
+											<img alt="ornamentation" height="15" src="https://i.imgur.com/a6KuaYz.png" style="display: block;" width="290">
+										</td>
+									</tr>
+									<tr>
+										<td style="font-family: Arial, sans-serif; color: #fcfbfd; font-size: 22px; font-weight: bold; line-height: 22px; padding-top: 15px; text-transform: uppercase;">
+											Much Derp
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<table align="center" cellpadding="0" cellspacing="0" width="236">
+												<tr>
+													<td height = "4">
+													</td>
+												</tr>
+												<tr>
+													<td bgcolor="#fcfbfd" height="3">
+													</td>
+												</tr>
+											</table>
+										</td>
+									</tr>
+									<tr>
+										<td style="font-family: Arial; font-size: 14px; font-weight: bold; line-height: 14px; padding-top: 5px; text-transform: uppercase">
+											<span style="font-family: 'Arial Black'; color: #fcfbfd; font-size: 28px; line-height: 28px;">
+												insta</span>
+											<span style="font-family: 'Arial Black'; font-size: 32px; line-height: 32px;"> <a href="https://www.instagram.com/leela_ig/" target="_blank">Link</a></span>
+											fun
+										</td>
+									</tr>
+									<tr>
+										<td style="
+											font-family: Arial; font-size: 14px; font-weight: bold; line-height: 14px; padding-top: 5px; text-transform: uppercase">
+											<span style="font-family: 'Arial Black'; color: #fcfbfd; font-size: 28px; line-height: 28px;">
+												insta</span>
+											<span style="font-family: 'Arial Black'; font-size: 32px; line-height: 32px;"> <a href="https://www.instagram.com/leela_ig/" target="_blank">Link</a></span>
+											fun
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<img alt="ornamentation" height="15" src="https://i.imgur.com/a6KuaYz.png" style="display: block; padding-top: 6px;" width="290">
+										</td>
+									</tr>
+								</table>
+							</td>
+						</tr>
 				</td>
 			</tr>
 		</table>
