working a media queries... a lot of work left :(

--- a/src/index.html
+++ b/src/index.html
@@ -4,28 +4,48 @@
 		<meta charset="utf-8">
 		<title>ZStall Info</title>
 		<meta name="viewport" content="width=device-width" />
+		<style>
+			@media screen and (max-width: 600px) {
+				.width-full {
+					width: 25% !important;
+					
+					margin: 0 auto;
+				}
+
+				.width-img {
+					width: 75% !important;
+					padding: 8px;
+					margin: 0 auto;
+				}
+			}
+
+		</style>
 	</head>
 	<body style="margin: 0; padding: 0;">
-		<table 	align="center" 
-				border="0" 
+		<table 	border="0" 
 				cellpadding="0" 
 				cellspacing="0" 
-				style="background-color: #d2d2d2;" 
-				width="70%">
+				style="background-color: #d2d2d2;"
+				width="600px"
+				align="center"
+				class="" 
+				>
 			<tr>
-				<td>
+				<td style="">
 					<table 	align="center" 
 							border="0" 
 							cellpadding="0" 
 							cellspacing="0" 
 							style="text-align: center;" 
-							width="600">
+							class="width-full"
+							width="100%">
 						<tr>
-							<td style="	background-color: #2d2d2d; 
+							<td style="	background-color: #5b3885; 
 										padding: 12px 0;" >
 								<img 	src="https://i.imgur.com/S0N1f3f.png" 
 										style="display: block; max-width: 100%;" 
-										width="600" />
+										width="600"
+										class="" />
 							</td>
 						</tr>
 						<tr>
@@ -43,7 +63,8 @@
 										color: #fcfbfd; 
 										font-family: 'Arial Black'; 
 										font-size: 26px; 
-										line-height: 26px; 
+										line-height: 26px;
+										margin: 0; 
 										padding: 10px 0; 
 										text-transform: uppercase;">
 										Zachary Stall News and Updates</td>
@@ -53,19 +74,25 @@
 							border="0" 
 							cellpadding="0" 
 							cellspacing="0" 
-							width="600">
+							class="width-img"
+							width="100%"
+							>
 						<tr>
 							<td style="	padding-top: 10px;
 										padding-bottom: 10px;">
 								<img 	src="https://i.imgur.com/DkwK2ug.jpg"
-										style="display: block; max-width: 100%;"
-										width="600" /></td>
+										style="	display: block; 
+												max-width: 100%;
+												height: auto;"
+										width="600"
+										class="" /></td>
 						</tr>
 					</table>
 					<table 	align="center" 
 							border="0" 
 							cellpadding="0" 
 							cellspacing="0" 
+							class="width-full"
 							width="600">
 						<tr>
 							<td style="padding-right: 10px;">
