--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,8 @@
 		<style>
 			@media screen and (max-width: 600px) {
 				.width-full {
-					width: 25% !important;
+					width: 100% !important;
 					
-					margin: 0 auto;
 				}
 
 				.width-img {
@@ -26,42 +25,41 @@
 				cellpadding="0" 
 				cellspacing="0" 
 				style="background-color: #d2d2d2;"
-				width="600px"
-				align="center"
-				class="" 
-				>
+				width="100%">
 			<tr>
-				<td style="">
+				<td style="padding: 0 10px;">>
 					<table 	align="center" 
 							border="0" 
 							cellpadding="0" 
 							cellspacing="0" 
-							style="text-align: center;" 
 							class="width-full"
+							style="	max-width: 600px;
+									text-align: center;" 
 							width="100%">
 						<tr>
 							<td style="	background-color: #5b3885; 
 										padding: 12px 0;" >
-								<img 	src="https://i.imgur.com/S0N1f3f.png" 
+								<img 	src="https://i.imgur.com/W13YJhI.png" 
 										style="display: block; max-width: 100%;" 
-										width="600"
-										class="" />
+										width="600" />
 							</td>
 						</tr>
 						<tr>
-							<td style="	color: #2d2d2d; 
-										font-family: 'Arial Black'; 
+							<td class="	"
+								style="	color: #2d2d2d; 
+										font-family: 'Arial Black', 'GillSans-Bold', 'Arial Bold', Arial, sans-serif; 
 										font-size: 74px; 
 										line-height: 74px; 
+										margin: 0;
 										padding: 5px 0 10px 0; 
 										text-transform: uppercase;">
-										ZStall.com
-							</td>
+										ZStall.com</td>
 						</tr>
 						<tr>
-							<td style="	background: #2d2d2d; 
+							<td class="	"
+								style="	background: #5b3885; 
 										color: #fcfbfd; 
-										font-family: 'Arial Black'; 
+										font-family: 'Arial Black', 'GillSans-Bold', 'Arial Bold', Arial, sans-serif; 
 										font-size: 26px; 
 										line-height: 26px;
 										margin: 0; 
@@ -70,164 +68,218 @@
 										Zachary Stall News and Updates</td>
 						</tr>
 					</table>
-					<table 	align="center" 
+					<table 	class=""
+							align="center" 
 							border="0" 
 							cellpadding="0" 
 							cellspacing="0" 
-							class="width-img"
-							width="100%"
-							>
+							style="	color: #fcfbfd;
+									max-width: 600px;"
+							width="100%">
 						<tr>
-							<td style="	padding-top: 10px;
-										padding-bottom: 10px;">
-								<img 	src="https://i.imgur.com/DkwK2ug.jpg"
-										style="	display: block; 
-												max-width: 100%;
-												height: auto;"
-										width="600"
-										class="" /></td>
+							<td style="padding-top: 20px;">
+								<img src="https://i.imgur.com/c1WLTP1.png"
+									 style="display: block; 
+											max-width: 100%;"
+									 width="600" /></td>
 						</tr>
 					</table>
-					<table 	align="center" 
+					<table 	class=""
+							align="center" 
 							border="0" 
 							cellpadding="0" 
-							cellspacing="0" 
-							class="width-full"
-							width="600">
+							cellspacing="0"
+							style="max-width: 600px;" 
+							width="100%">
 						<tr>
-							<td style="padding-right: 10px;">
-								<table 	border="0" 
-										cellpadding="0" 
-										cellspacing="0" 
-										style="text-align: center;" 
-										bgcolor="#5b3885"; 
-										width="290">
-									<tr>
-										<td>
-											<img 	alt="ornamentation" 
-													height="15" 
-													src="https://i.imgur.com/PdYlc3R.png" 
-													style="display: block;" 
-													width="290"></td>
-									</tr>
-									<tr>
-										<td style="	font-family: 'Arial Black'; 
-													color: #fcfbfd; 
-													font-size: 48px; 
-													line-height: 48px; 
-													padding-top: 20px; 
-													text-transform: uppercase;">
-													&bull; SAT &bull;</td>
-									</tr>
-									<tr>
-										<td style="	font-family: Arial; 
-													color: #fcfbfd; 
-													font-size: 30px; 
-													font-weight: bold; 
-													line-height: 30px; 
-													padding-bottom: 20px; 
-													padding-top: 5px; 
-													text-transform: uppercase;">
-													New Pics</td>
-									</tr>
-									<tr>
-										<td>
-											<img 	src="https://i.imgur.com/PdYlc3R.png"
-													style="display: block;" 
-													width="290"></td>
-									</tr>
-								</table>
-							</td>
-							<td style="padding-left: 10px;">
-								<table 	border="0" 
-										cellpadding="0" 
-										cellspacing="0" 
-										style="text-align: center;" 
-										bgcolor="#0089b4"; 
-										width="290">
-									<tr>
-										<td>
-											<img 	alt="ornamentation" 
-													height="15" 
-													src="https://i.imgur.com/a6KuaYz.png" 
-													style="display: block;" 
-													width="290">
-										</td>
-									</tr>
-									<tr>
-										<td style="	font-family: Arial, 
-													sans-serif; color: #fcfbfd; 
-													font-size: 22px; 
-													font-weight: bold; 
-													line-height: 22px; 
-													padding-top: 15px; 
-													text-transform: uppercase;">
-													Much Derp</td>
-									</tr>
-									<tr>
-										<td>
-											<table 	align="center" 
-													border="0" 
-													cellpadding="0" 
-													cellspacing="0" 
-													width="236">
-												<tr>
-													<td height = "4"></td>
-												</tr>
-												<tr>
-													<td bgcolor="#fcfbfd" height="3"></td>
-												</tr>
-											</table>
-										</td>
-									</tr>
-									<tr>
-										<td style="	font-family: Arial; 
-													font-size: 14px; 
-													font-weight: bold; 
-													line-height: 14px; 
-													padding-top: 5px; 
-													text-transform: uppercase">
-											<span style="	font-family: 'Arial Black'; 
-															color: #fcfbfd; 
-															font-size: 28px; 
-															line-height: 28px;">
-															insta</span>
-											<span style="	font-family: 'Arial Black'; 
-															font-size: 32px; 
-															line-height: 32px;"><a 
-																href="https://www.instagram.com/leela_ig/" target="_blank">Link</a></span>
-															fun</td>
-									</tr>
-									<tr>
-										<td style="	font-family: Arial;
-													font-size: 14px; 
-													font-weight: bold; 
-													line-height: 14px; 
-													padding-top: 5px; 
-													text-transform: uppercase">
-											<span style="	font-family: 'Arial Black'; 
-															color: #fcfbfd; 
-															font-size: 28px; 
-															line-height: 28px;">
-															insta</span>
-											<span style="	font-family: 'Arial Black'; 
-															font-size: 32px; 
-															line-height: 32px;"><a
-																href="https://www.instagram.com/leela_ig/" target="_blank">Link</a></span>
-															fun</td>
-									</tr>
-									<tr>
-										<td>
-											<img 	alt="ornamentation" 
-													height="15" 
-													src="https://i.imgur.com/a6KuaYz.png" 
-													style="	display: block; 
-															padding-top: 6px;" 
-													width="290"></td>
-									</tr>
-								</table>
+							<td style="font-size: 0;">
+								<div style="display: inline-block;">
+									<table 	class=""
+											align="left"
+											border="0" 
+											cellpadding="0" 
+											cellspacing="0"  
+											width="300">
+										<tr>
+											<td>
+												<table  class=""
+														bgcolor="5b3885"
+														border="0"
+														cellpadding="0"
+														cellspacing="0"
+														style="	text-align: center;
+																text-transform: uppercase;
+																margin-top: 5px;"
+														width="290px">
+													<tr>
+														<td style="	font-size: 18px;
+																	line-height: 18px;">
+															<img 	class=""
+																	alt="ornamentation" 
+																	height="15" 
+																	src="https://i.imgur.com/5QqBvxp.png" 
+																	style="display: block;" 
+																	width="290"></td>
+													</tr>
+													<tr>
+														<td class="	"
+															style="	color: #fcfbfd;
+																	font-family: 'Arial Black', 'GillSans-Bold', 'Arial Bold', Arial, sans-serif; 
+																	font-size: 48px;
+																	font-weight: bold; 
+																	line-height: 48px; 
+																	padding-top: 25px;">
+																	&bull; SAT &bull;</td>
+													</tr>
+													<tr>
+														<td class="	"
+															style="	color: #fcfbfd;
+																	font-family: 'Arial Black', 'GillSans-Bold', 'Arial Bold', Arial, sans-serif;  
+																	font-size: 30px; 
+																	font-weight: bold; 
+																	line-height: 100%; 
+																	padding-bottom: 25px; 
+																	padding-top: 5px;">
+																	New Pics</td>
+													</tr>
+													<tr>
+														<td>
+															<img 	class=""
+																	alt="ornamentation"
+																	height="16"
+																	src="https://i.imgur.com/5QqBvxp.png"
+																	style="display: block;" 
+																	width="290" /></td>
+													</tr>
+												</table>
+											</td>
+										</tr>
+									</table>
+								</div>
+								<div style="display: inline-block;">
+									<table 	class=""
+											align="center"
+											border="0" 
+											cellpadding="0" 
+											cellspacing="0"  
+											width="300">
+										<tr>
+											<td>
+												<table  class=""
+														bgcolor="#0089b4"; 	
+														border="0" 
+														cellpadding="0" 
+														cellspacing="0"
+														style=" color: #fcfbfd;
+																text-align: center;
+																text-transform: uppercase;
+																margin-top: 5px;
+																margin-left: 10px;" 
+														width="290">
+													<tr>
+														<td style="	font-size: 18px;
+																	line-height: 18px;">
+															<img 	class=""
+																	alt="ornamentation" 
+																	height="15" 
+																	src="https://i.imgur.com/5QqBvxp.png" 
+																	style="display: block;" 
+																	width="290"></td>
+													</tr>
+													<tr>
+														<td class=""
+															style="	color: #fcfbfd;
+																	font-family: Arial, 'Arial Black', 'GillSans-Bold', 'Arial Bold', Arial, sans-serif;
+																	font-size: 30px;
+																	font-weight: bold;
+																	line-height: 100%;
+																	padding-top: 15px;">
+																	Much Derp</td>
+													</tr>
+													<tr>
+														<td>
+															<table 	class=""
+																	align="center" 
+																	border="0" 
+																	cellpadding="0" 
+																	cellspacing="0" 
+																	style="margin: 0 auto;"
+																	width="236">
+																<tr>
+																	<td height = "4"
+																		style="	font-size: 4px;
+																				line-height: 4px;">
+																		&nbsp;
+																	</td>
+																</tr>
+																<tr>
+																	<td bgcolor="#fcfbfd" 
+																		height="3"
+																		style="	font-size: 3px;
+																				line-height: 3px;">
+																		&nbsp;
+																	</td>
+																</tr>
+															</table>
+														</td>
+													</tr>
+													<tr>
+														<td class= ""
+															style="	color: #fcfbfd;
+																	font-family: Arial; 
+																	font-size: 14px; 
+																	font-weight: bold; 
+																	line-height: 14px; 
+																	padding-top: 5px;">
+															<span 	class=""
+																	style="	font-family: 'Arial Black', 'GillSans-Bold','Arial Bold', Arial, sans-serif; 
+																	font-size: 35.5px;
+																	line-height: 35.5px;">
+																	insta</span>
+															<span 	class=""
+																	style="	font-family: 'Arial Black'; 
+																	font-size: 32px; 
+																	line-height: 32px;">
+																	<a href="https://www.instagram.com/leela_ig/" target="_blank">Link</a></span>
+																	fun</td>
+													</tr>
+													<tr>
+														<td class= ""
+															style="	color: #fcfbfd;
+																	font-family: Arial; 
+																	font-size: 14px; 
+																	font-weight: bold; 
+																	line-height: 14px; 
+																	padding-top: 5px;">
+															<span 	class=""
+																	style="	font-family: 'Arial Black', 'GillSans-Bold','Arial Bold', Arial, sans-serif; 
+																	font-size: 35.5px;
+																	line-height: 35.5px;">
+																	insta</span>
+															<span 	class=""
+																	style="	font-family: 'Arial Black'; 
+																	font-size: 32px; 
+																	line-height: 32px;">
+																	<a href="https://www.instagram.com/leela_ig/" target="_blank">Link</a></span>
+																	fun</td>
+													</tr>
+													<tr>
+														<td>
+															<img 	class="" 
+																	alt="ornamentation" 
+																	height="16"
+																	src="https://i.imgur.com/5QqBvxp.png" 
+																	style="	display: block;" 
+																	width="290" /></td>
+													</tr>
+												</table>
+											</td>
+										</tr>
+									</table>
+								</div>
 							</td>
 						</tr>
+					</table>
 				</td>
 			</tr>
 		</table>
