--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,64 @@
 		<title>ZStall Info</title>
 		<meta name="viewport" content="width=device-width" />
 		<style>
+			table {
+				margin: 0 auto !improtant;
+			}
+
 			@media screen and (max-width: 600px) {
 				.width-full {
 					width: 100% !important;
-					
 				}
-
-				.width-img {
-					width: 75% !important;
-					padding: 8px;
-					margin: 0 auto;
+				.email-title {
+					font-size: 48px !important;
+					line-height: 48px !important;
+				}
+				.email-slogan {
+					font-size: 18px !important;
+					line-height: 18px !important;
+				}
+				.email-ornamentation {
+					height: auto !important;
+					width: 100% !important;
+				}
+				.email-marginclr {
+					margin: 0 !important;
 				}
 			}
 
+			@media screen and (max-width: 1160px) {
+	        u + .gmail .width-full {
+	          width: 100% !important; }
+	        u + .gmail .col-one-stack {
+	          padding: 0 !important; }
+	        u + .gmail .col-two-stack {
+	          padding: 20px 0 0 0 !important; }
+	        u + .gmail .email-stars {
+	          padding: 5px 0 !important; }
+	        u + .gmail .email-title {
+	     	  font-size: 52px !important;
+	          line-height: 52px !important;
+	          padding: 2px 0 3px !important; }
+	        u + .gmail .email-slogan {
+	          font-size: 18px !important;
+	          line-height: 18px ;
+	          padding: 5px 0 !important; }
+	        u + .gmail .email-date-day {
+	          padding-top: 10px !important; }
+	        u + .gmail .email-date-month {
+	          padding-bottom: 10px !important; }
+	        u + .gmail .email-ornamentation {
+	          height: auto !important;
+	          width: 100% !important; }
+	        u + .gmail .padding-top-10 {
+	          padding-top: 10px !important; }
+	        u + .gmail .stack-column-two {
+	            padding-top: 20px !important; } 
+	        }
+
 		</style>
 	</head>
-	<body style="margin: 0; padding: 0;">
+	<body class="gmail" style="margin: 0; padding: 0;">
 		<table 	border="0" 
 				cellpadding="0" 
 				cellspacing="0" 
@@ -45,7 +87,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td class="	"
+							<td class="	email-title"
 								style="	color: #2d2d2d; 
 										font-family: 'Arial Black', 'GillSans-Bold', 'Arial Bold', Arial, sans-serif; 
 										font-size: 74px; 
@@ -56,7 +98,7 @@
 										ZStall.com</td>
 						</tr>
 						<tr>
-							<td class="	"
+							<td class="	email-slogan"
 								style="	background: #5b3885; 
 										color: #fcfbfd; 
 										font-family: 'Arial Black', 'GillSans-Bold', 'Arial Bold', Arial, sans-serif; 
@@ -68,7 +110,7 @@
 										Zachary Stall News and Updates</td>
 						</tr>
 					</table>
-					<table 	class=""
+					<table 	class="width-full"
 							align="center" 
 							border="0" 
 							cellpadding="0" 
@@ -84,7 +126,7 @@
 									 width="600" /></td>
 						</tr>
 					</table>
-					<table 	class=""
+					<table 	class="width-full"
 							align="center" 
 							border="0" 
 							cellpadding="0" 
@@ -94,7 +136,7 @@
 						<tr>
 							<td style="font-size: 0;">
 								<div style="display: inline-block;">
-									<table 	class=""
+									<table 	class="width-full"
 											align="left"
 											border="0" 
 											cellpadding="0" 
@@ -102,7 +144,7 @@
 											width="300">
 										<tr>
 											<td>
-												<table  class=""
+												<table  class="width-full"
 														bgcolor="5b3885"
 														border="0"
 														cellpadding="0"
@@ -114,7 +156,7 @@
 													<tr>
 														<td style="	font-size: 18px;
 																	line-height: 18px;">
-															<img 	class=""
+															<img 	class="email-ornamentation"
 																	alt="ornamentation" 
 																	height="15" 
 																	src="https://i.imgur.com/5QqBvxp.png" 
@@ -144,7 +186,7 @@
 													</tr>
 													<tr>
 														<td>
-															<img 	class=""
+															<img 	class="email-ornamentation"
 																	alt="ornamentation"
 																	height="16"
 																	src="https://i.imgur.com/5QqBvxp.png"
@@ -157,7 +199,7 @@
 									</table>
 								</div>
 								<div style="display: inline-block;">
-									<table 	class=""
+									<table 	class="width-full"
 											align="center"
 											border="0" 
 											cellpadding="0" 
@@ -165,7 +207,7 @@
 											width="300">
 										<tr>
 											<td>
-												<table  class=""
+												<table  class="width-full email-marginclr"
 														bgcolor="#0089b4"; 	
 														border="0" 
 														cellpadding="0" 
@@ -179,7 +221,7 @@
 													<tr>
 														<td style="	font-size: 18px;
 																	line-height: 18px;">
-															<img 	class=""
+															<img 	class="email-ornamentation"
 																	alt="ornamentation" 
 																	height="15" 
 																	src="https://i.imgur.com/5QqBvxp.png" 
@@ -265,7 +307,7 @@
 													</tr>
 													<tr>
 														<td>
-															<img 	class="" 
+															<img 	class="email-ornamentation" 
 																	alt="ornamentation" 
 																	height="16"
 																	src="https://i.imgur.com/5QqBvxp.png" 
