--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<style>
 			table {
-				margin: 0 auto !improtant; }
+				margin: 0 auto !important; }
 
 			@media screen and (max-width: 635px) {
 				.width-full {
